--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-18.04, windows-2019, macos-10.15]
-        version: ['6.1.3','6.2.0']
+        os: [windows-2019, ubuntu-20.04]
+        version: ['6.1.3']
     steps:
       - uses: actions/checkout@v2
 
@@ -23,12 +23,37 @@ jobs:
         run: |
           npm run build-setup-python
           npm run build
-      - name: Install Qt with options
-        uses: ./
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v2.14.0
         with:
-          modules: 'qtwebengine'
-          version: ${{ matrix.version }}
-          tools: 'tools_ifw,4.0.0,qt.tools.ifw.40 tools_qtcreator,4.13.2-0,qt.tools.qtcreator'
+          # Version of Qt to install
+          version: '6.1.3'
+          # Host platform
+          host: 'windows'
+          # Target platform for build
+          target: 'desktop'
+          # Architecture for Windows/Android
+          arch: 'win64_msvc2019_64'
+          # Whether or not to install Qt dependencies on Linux
+          install-deps: 'true'
+          # Additional Qt modules to install
+          modules: 'qtcharts '
+          # Whether or not to actually download Qt
+          cached: 'false'
+          # Whether or not to automatically run setup-python to find a valid python version.
+          setup-python: 'true'
+          # Qt tools to download--specify comma-separated argument lists which are themselves separated by spaces: <tool_name>,<tool_version>,<tool_arch>
+          tools: 'tools_ifw,4.1.1,qt.tools.ifw.41 tools_qtcreator,5.0.1-0,qt.tools.qtcreator'
+          # Whether or not to set environment variables after running aqtinstall
+          set-env: 'false'
+          # Whether or not to actually install Qt or just the tools from the tools argument
+          tools-only: 'fasle'
+          # Version of aqtinstall to use in case of issues
+          aqtversion: '==1.2.5'
+          # Version of py7zr to use in case of issues
+          py7zrversion: '==0.16.1'
+          # Any extra arguments to append to the back
+          extra: '--external 7z'    
 
       - name: Configure test project on windows
         if: startsWith(matrix.os, 'windows')
