--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2019, ubuntu-20.04]
+        os: [windows-2019]
         version: ['6.1.3']
     steps:
       - uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
           # Whether or not to automatically run setup-python to find a valid python version.
           setup-python: 'true'
           # Qt tools to download--specify comma-separated argument lists which are themselves separated by spaces: <tool_name>,<tool_version>,<tool_arch>
-          tools: 'tools_ifw,4.1.1,qt.tools.ifw.41 tools_qtcreator,5.0.1-0,qt.tools.qtcreator'
+          tools: 'tools_qtcreator,5.0.1-0,qt.tools.qtcreator'
           # Whether or not to set environment variables after running aqtinstall
           set-env: 'false'
           # Whether or not to actually install Qt or just the tools from the tools argument
