--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2019]
+        os: [windows-2019, ubuntu-20.04]
         version: ['6.1.3']
     steps:
       - uses: actions/checkout@v2
@@ -43,13 +43,13 @@ jobs:
           # Whether or not to automatically run setup-python to find a valid python version.
           setup-python: 'true'
           # Qt tools to download--specify comma-separated argument lists which are themselves separated by spaces: <tool_name>,<tool_version>,<tool_arch>
-          tools: 'tools_qtcreator,5.0.1-0,qt.tools.qtcreator'
+          tools: 'qt.tools.ifw41,4.1.1-202105261131,qt.tools.ifw tools_qtcreator,5.0.1-0,qt.tools.qtcreator'
           # Whether or not to set environment variables after running aqtinstall
-          set-env: 'false'
+          set-env: 'true'
           # Whether or not to actually install Qt or just the tools from the tools argument
           tools-only: 'fasle'
           # Version of aqtinstall to use in case of issues
-          aqtversion: '==1.2.5'
+          aqtversion: '==2.0.0'
           # Version of py7zr to use in case of issues
           py7zrversion: '==0.16.1'
           # Any extra arguments to append to the back
@@ -68,6 +68,7 @@ jobs:
         if: (!startsWith(matrix.os, 'windows'))
         run: |
           cd src
-          ls $Qt6_DIR/lib/cmake
+          ls  %Qt6_DIR%/lib/cmake
           qmake
+          make
         shell: bash
