--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -29,7 +29,7 @@ jobs:
           # Version of Qt to install
           version: '6.1.3'
           # Host platform
-          host: 'windows'
+          host: 'linux'
           # Target platform for build
           target: 'desktop'
           # Architecture for Windows/Android
