--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -68,6 +68,6 @@ jobs:
         if: (!startsWith(matrix.os, 'windows'))
         run: |
           cd src
-          %Qt6_DIR%/bin/qmake
+          %Qt6_DIR%/bin/qmake *.pro
           make
         shell: bash
