--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -68,9 +68,9 @@ jobs:
         if: (!startsWith(matrix.os, 'windows'))
         run: |
           set -m
-          ls
+          ls %Qt6_DIR%/bin/
           mkdir build
           cd build/
-          %Qt6_DIR%/bin/qmake ../src/*.pro
+          qmake ../src/*.pro
           make
         shell: bash
