--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,26 +8,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04]
-        version: ['6.1.3']
+        version: ['6.2.0']
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '10.x'
-
-#       - name: "npm ci"
-#         run: npm ci
-
-#       - name: "npm run build"
-#         run: |
-#           npm run build-setup-python
-#           npm run build
       - name: Install Qt
         uses: jurplel/install-qt-action@v2.14.0
         with:
           # Version of Qt to install
-          version: '6.1.3'
+          version: ${{ matrix.version }}
           # Host platform
           host: 'linux'
           # Target platform for build
