--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,7 +32,7 @@ jobs:
           # Whether or not to automatically run setup-python to find a valid python version.
           setup-python: 'true'
           # Qt tools to download--specify comma-separated argument lists which are themselves separated by spaces: <tool_name>,<tool_version>,<tool_arch>
-          tools: 'tools_qtcreator,5.0.2-0,qt.tools.qtcreator'
+          tools: 'desktop, tools_qtcreator, qt.tools.qtcreator'
           # Whether or not to set environment variables after running aqtinstall
           set-env: 'true'
           # Whether or not to actually install Qt or just the tools from the tools argument
