--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -34,12 +34,10 @@ jobs:
 #         with:
 #           vs-version: 16.4
       - name: build
+        
         run: |
-          pwd
-          dir
-#          dir Qt/${{ matrix.version }}/
-#          mkdir build
-#          cd build
-#          Qt/${{ matrix.version }}/msvc2019/bin/qmake ../src/*.pro -spec win32-msvc
-#          Qt/Tools/QtCreator/bin/jom/jom.exe
+          mkdir build
+          cd build
+          ../${{ matrix.version }}/msvc2019/bin/qmake ../src/*.pro -spec win32-msvc
+          ../Tools/QtCreator/bin/jom/jom.exe
               
