--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -38,8 +38,8 @@ jobs:
         run: |
           mkdir build
           cd build
-          dir ../${{ matrix.version }}/msvc2019/bin/qmake*
+          dir ../${{ matrix.version }}/msvc2019_64/bin/qmake*
           dir ../Tools/QtCreator/bin/jom/jom*
-          #../${{ matrix.version }}/msvc2019/bin/qmake.exe ../src/*.pro -spec win32-msvc
-          #../Tools/QtCreator/bin/jom/jom.exe
+          ../${{ matrix.version }}/msvc2019_64/bin/qmake.exe ../src/*.pro -spec win32-msvc
+          ../Tools/QtCreator/bin/jom/jom.exe
               
