--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -40,6 +40,7 @@ jobs:
           cd build
           dir ../${{ matrix.version }}/msvc2019_64/bin/qmake*
           dir ../Tools/QtCreator/bin/jom/jom*
-          ../${{ matrix.version }}/msvc2019_64/bin/qmake.exe ..\src\*.pro -spec win32-msvc
+          dir ../src/
+          ../${{ matrix.version }}/msvc2019_64/bin/qmake.exe ../src/test.pro -spec win32-msvc
           ../Tools/QtCreator/bin/jom/jom.exe
               
