--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,7 +39,7 @@ jobs:
           mkdir build
           cd build
           # set msvc env
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64}
+          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           dir ../${{ matrix.version }}/msvc2019_64/bin/qmake*
           dir ../Tools/QtCreator/bin/jom/jom*
           dir ../src/
