--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -29,18 +29,20 @@ jobs:
           aqt install-qt windows desktop 6.2.0 win64_msvc2019_64 -m qtcharts
           # install tools
           aqt install-tool windows desktop tools_qtcreator qt.tools.qtcreator
-#       - name: Add msbuild to PATH
-#         uses: microsoft/setup-msbuild@v1.0.2
-#         with:
-#           vs-version: 16.4
-      - name: build
+          
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.2
         
+      - name: Set MSVC command prompt
+        uses: ilammy/msvc-dev-cmd@v1  
+      
+      - name: build        
         run: |
           mkdir build
           cd build
           # set msvc env
-          dir C:\Program Files (x86)\Microsoft Visual Studio\2019
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
+          # dir C:\Program Files (x86)\Microsoft Visual Studio\2019          
+          # call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           dir ../${{ matrix.version }}/msvc2019_64/bin/qmake*
           dir ../Tools/QtCreator/bin/jom/jom*
           dir ../src/
