--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           path: |
             ~\AppData\Local\pip\Cache
-            ${{GITHUB_WORKSPACE}}\${{ matrix.version }}
-            ${{GITHUB_WORKSPACE}}\Tools}
+            ${{env.GITHUB_WORKSPACE}}\${{ matrix.version }}
+            ${{env.GITHUB_WORKSPACE}}\Tools}
           key: ${{ runner.os }}-Qt/${{matrix.version}}
       - name: setup python
         uses: actions/setup-python@v2.2.2
