--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            ~\AppData\Local\pip\Cache
-            ${{env.GITHUB_WORKSPACE}}\${{ matrix.version }}
-            ${{env.GITHUB_WORKSPACE}}\Tools}
+            #~\AppData\Local\pip\Cache
+            ${{env.GITHUB_WORKSPACE}}/${{ matrix.version }}
+            ${{env.GITHUB_WORKSPACE}}/Tools}
           key: ${{ runner.os }}-Qt/${{matrix.version}}
       - name: setup python
         uses: actions/setup-python@v2.2.2
